# evolvenn_cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  htmlanim.hpp  htmlanim_shapes.hpp  main.cpp
neuralnet/: CMakeLists.txt
neuralnet/include/neuralnet/: neuralnet.h
neuralnet/src/: neuralnet.cpp
neuralnet/tests/: CMakeLists.txt  basics_test.cpp
population/: CMakeLists.txt
population/include/population/: individual.h  population.h
population/src/: population.cpp
